--- a/nodejs-complete-course/project/package.json
+++ b/nodejs-complete-course/project/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon app.js",
     "start-server": "node app.js"
   },
-  "author": "Maximilian Schwarzmüller",
+  "author": "Surya Datta",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3"
@@ -16,12 +16,8 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "mongodb": "^3.1.6",
-    "mongoose": "^5.4.19",
-    "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "express": "^4.16.4",
+    "mongodb": "^3.2.2",
+    "mongoose": "^5.4.19"
   }
 }
