--- a/nodejs-complete-course/project/package.json
+++ b/nodejs-complete-course/project/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.19"
   }
