--- a/nodejs-complete-course/project/package.json
+++ b/nodejs-complete-course/project/package.json
@@ -17,9 +17,13 @@
     "body-parser": "^1.18.3",
     "connect-mongodb-session": "^2.1.1",
     "ejs": "^2.6.1",
-    "express": "^4.16.4",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
-    "mongodb": "^3.2.2",
-    "mongoose": "^5.4.19"
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.17",
+    "mysql2": "^1.6.1",
+    "pug": "^2.0.3",
+    "sequelize": "^5.0.0-beta.11"
   }
 }
