--- a/nodejs-complete-course/project/package.json
+++ b/nodejs-complete-course/project/package.json
@@ -22,12 +22,10 @@
     "csurf": "^1.9.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
-    "mysql2": "^1.6.1",
-    "pug": "^2.0.3",
-    "sequelize": "^5.0.0-beta.11"
+    "nodemailer": "^6.0.0",
+    "nodemailer-sendgrid-transport": "^0.2.0"
   }
 }
