--- a/nodejs-complete-course/project/package.json
+++ b/nodejs-complete-course/project/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.1",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "nodemailer": "^6.0.0",
