--- a/nodejs-complete-course/project/package.json
+++ b/nodejs-complete-course/project/package.json
@@ -26,7 +26,9 @@
     "express-validator": "^5.3.1",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
+    "multer": "^1.4.1",
     "nodemailer": "^6.0.0",
-    "nodemailer-sendgrid-transport": "^0.2.0"
+    "nodemailer-sendgrid-transport": "^0.2.0",
+    "pdfkit": "^0.9.0"
   }
 }
