--- a/nodejs-complete-course/project/package.json
+++ b/nodejs-complete-course/project/package.json
@@ -29,6 +29,7 @@
     "multer": "^1.4.1",
     "nodemailer": "^6.0.0",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "pdfkit": "^0.9.0"
+    "pdfkit": "^0.9.0",
+    "stripe": "^6.28.0"
   }
 }
